Alteração da estrutura do codigo

--- a/catalog_service/Dockerfile
+++ b/catalog_service/Dockerfile
@@ -6,9 +6,15 @@ COPY requirements.txt .
 RUN pip install -r requirements.txt
 
 # Instala netcat-openbsd para o wait-for-it funcionar
-RUN apt-get update && apt-get install -y netcat-openbsd && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y netcat-openbsd curl && rm -rf /var/lib/apt/lists/*
 
 COPY . .
 
-# Usa wait-for-it para garantir que o DB esteja pronto antes de iniciar o app
+# Tornar o script executável
+RUN chmod +x ./wait-for-it.sh
+
+# Expor porta
+EXPOSE 8000
+
+# Use shell script for command to allow variable expansion
 CMD ["./wait-for-it.sh", "ualflix_db", "5432", "--", "python", "app.py"]
