--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,7 +33,8 @@ server {
         add_header Access-Control-Expose-Headers 'Content-Length,Content-Range';
     }
 
-    localtion /stream/ {
+    # Streaming service
+    location /stream/ {
         proxy_pass http://streaming_service:8001/stream/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
