--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -24,6 +24,17 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # Authentication API
+    location /api/auth/ {
+        rewrite ^/api/auth(/.*)$ $1 break;
+        proxy_pass http://authentication_service:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Servir vídeos diretamente
     location /videos/ {
         alias /videos/;
@@ -36,6 +47,22 @@ server {
     # Streaming service
     location /stream/ {
         proxy_pass http://streaming_service:8001/stream/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Grafana dashboard access - updated port to 4000
+    location /grafana/ {
+        proxy_pass http://grafana:4000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Prometheus UI
+    location /prometheus/ {
+        proxy_pass http://prometheus:9090/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
