--- a/nginx/load_balancer.conf
+++ b/nginx/load_balancer.conf
@@ -15,6 +15,11 @@ upstream streaming_servers {
     ip_hash;
 }
 
+upstream auth_servers {
+    server authentication_service_1:8000;
+    server authentication_service_2:8000 backup;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -41,6 +46,17 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
+    # Authentication Service
+    location /api/auth/ {
+        rewrite ^/api/auth(/.*)$ $1 break;
+        proxy_pass http://auth_servers;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     # Servir vídeos através do streaming service
     location /videos/ {
         proxy_pass http://streaming_servers/stream/;
@@ -57,9 +73,9 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Grafana UI
+    # Grafana UI - updated port to 4000
     location /grafana/ {
-        proxy_pass http://grafana:3000/;
+        proxy_pass http://grafana:4000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
