Mini netflix login/registo a dar

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name localhost;
-    client_max_body_size 1024M; 
+    client_max_body_size 1024M;
 
     # Frontend (React app)
     location / {
@@ -11,17 +11,9 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-    }
-
-    # API Backend (Flask app)
-    location /api/ {
-        rewrite ^/api(/.*)$ $1 break;
-        proxy_pass http://catalog_service:8000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Authentication API
@@ -33,6 +25,23 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # API Backend (Flask app)
+    location /api/ {
+        rewrite ^/api(/.*)$ $1 break;
+        proxy_pass http://catalog_service:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Servir vídeos diretamente
@@ -52,7 +61,7 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
-    # Grafana dashboard access - updated port to 4000
+    # Grafana dashboard access
     location /grafana/ {
         proxy_pass http://grafana:4000/;
         proxy_http_version 1.1;
