--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 services:
-
   ualflix_db:
     image: postgres:13
     environment:
@@ -11,24 +10,41 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
       - ./db_init.sql:/docker-entrypoint-initdb.d/db_init.sql
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   catalog_service:
     build: ./catalog_service
     depends_on:
-      - ualflix_db
-      - queue_service
+      ualflix_db:
+        condition: service_healthy
+      queue_service:
+        condition: service_started
     networks:
       - ualflix_network
     volumes:
       - video_storage:/videos
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   authentication_service:
     build: ./authentication_service
     depends_on:
-      - ualflix_db
-      - queue_service
+      ualflix_db:
+        condition: service_healthy
     networks:
       - ualflix_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   streaming_service:
     build: ./streaming_service
@@ -36,11 +52,17 @@ services:
       - video_storage:/videos
     networks:
       - ualflix_network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   video_processor:
     build: ./video_processor
     depends_on:
-      - queue_service
+      queue_service:
+        condition: service_started
     networks:
       - ualflix_network
     volumes:
@@ -56,13 +78,21 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER=ualflix
       - RABBITMQ_DEFAULT_PASS=ualflix_password
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 30s
+      timeout: 30s
+      retries: 3
 
   frontend:
     build: ./frontend
-    ports:
-      - "3000:3000"  # Adicionado mapeamento de porta para o frontend
     networks:
       - ualflix_network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:3000 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
     image: nginx:latest
@@ -72,13 +102,18 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - video_storage:/videos
     depends_on:
-      - frontend
-      - catalog_service
-      - streaming_service
+      frontend:
+        condition: service_healthy
+      catalog_service:
+        condition: service_healthy
+      authentication_service:
+        condition: service_healthy
+      streaming_service:
+        condition: service_healthy
     networks:
       - ualflix_network
+    restart: unless-stopped
 
-  # Prometheus para coleta de métricas
   prometheus:
     image: prom/prometheus:latest
     volumes:
@@ -94,7 +129,7 @@ services:
   grafana:
     image: grafana/grafana:latest
     ports:
-      - "4000:4000"  
+      - "4000:4000"
     volumes:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana/provisioning:/etc/grafana/provisioning
@@ -105,7 +140,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_SERVER_HTTP_PORT=4000 
+      - GF_SERVER_HTTP_PORT=4000
 
 volumes:
   db_data:
