--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,7 +16,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Authentication API
+    # Authentication API - FIXED
     location /api/auth/ {
         rewrite ^/api/auth(/.*)$ $1 break;
         proxy_pass http://authentication_service:8000;
@@ -30,7 +30,21 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # API Backend (Flask app)
+    # Admin API
+    location /api/admin/ {
+        rewrite ^/api/admin(/.*)$ /api/admin$1 break;
+        proxy_pass http://admin_service:8002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Catalog API (Backend Flask app)
     location /api/ {
         rewrite ^/api(/.*)$ $1 break;
         proxy_pass http://catalog_service:8000;
@@ -44,29 +58,45 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Servir vídeos diretamente
+    # Video streaming através do streaming service (PRINCIPAL)
+    location /stream/ {
+        proxy_pass http://streaming_service:8001/stream/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configurações específicas para streaming de vídeo
+        proxy_buffering off;
+        proxy_cache off;
+        proxy_set_header Range $http_range;
+        proxy_set_header If-Range $http_if_range;
+        proxy_no_cache 1;
+        proxy_cache_bypass 1;
+    }
+
+    # Acesso direto aos vídeos (fallback/download)
     location /videos/ {
-        alias /videos/;
+        proxy_pass http://streaming_service:8001/stream/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Range $http_range;
         add_header Access-Control-Allow-Origin *;
         add_header Access-Control-Allow-Methods 'GET, OPTIONS';
         add_header Access-Control-Allow-Headers 'Range';
         add_header Access-Control-Expose-Headers 'Content-Length,Content-Range';
     }
 
-    # Streaming service
-    location /stream/ {
-        proxy_pass http://streaming_service:8001/stream/;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # Grafana dashboard access
+    # Grafana dashboard
     location /grafana/ {
         proxy_pass http://grafana:4000/;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Prometheus UI
@@ -75,5 +105,17 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # RabbitMQ Management
+    location /rabbitmq/ {
+        proxy_pass http://queue_service:15672/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
