--- a/database/postgresql_master.conf
+++ b/database/postgresql_master.conf
@@ -1,4 +1,4 @@
-# PostgreSQL Master Configuration
+# PostgreSQL Master Configuration - CORRIGIDO para PostgreSQL 13
 # database/postgresql_master.conf
 
 # CONNECTIONS AND AUTHENTICATION
@@ -16,7 +16,7 @@ wal_level = replica                    # Para suportar replicação
 archive_mode = on                      # Enable archiving
 archive_command = 'test ! -f /var/lib/postgresql/archive/%f && cp %p /var/lib/postgresql/archive/%f'
 max_wal_senders = 3                    # Máximo de 3 slaves
-wal_keep_segments = 32                 # Manter WAL segments para slaves
+wal_keep_size = 1GB                    # CORRIGIDO: Substituído wal_keep_segments por wal_keep_size
 hot_standby = on                       # Permitir queries no slave
 
 # REPLICATION
