--- a/database/postgresql_slave.conf
+++ b/database/postgresql_slave.conf
@@ -1,4 +1,4 @@
-# PostgreSQL Slave Configuration
+# PostgreSQL Slave Configuration - CORRIGIDO para PostgreSQL 13
 # database/postgresql_slave.conf
 
 # CONNECTIONS AND AUTHENTICATION
@@ -23,7 +23,6 @@ hot_standby_feedback = on              # Feedback para o master
 max_standby_archive_delay = 30s
 max_standby_streaming_delay = 30s
 wal_receiver_status_interval = 10s
-hot_standby_feedback = on
 
 # LOGGING
 logging_collector = on
